clean up code before pull request

--- a/client/styles.css
+++ b/client/styles.css
@@ -37,9 +37,9 @@
 }
 
 .session {
-  visibility: hidden;
+  /*visibility: hidden;*/
 }
 
 .noSession {
-  visibility: visible;
+  /*visibility: visible;*/
 }
