--- a/client/styles.css
+++ b/client/styles.css
@@ -77,6 +77,7 @@
   float: left;
 }
 
+
 .gif-container {
   background-color: black;
   float: right;
@@ -95,4 +96,11 @@
 
 .gif-search {
   float: right;
+}
+
+li .card .card-image img {
+  height: auto;
+  width: auto;
+  margin: 0;
+  box-shadow: none;
 }
